Client: reviewed method for launching system commands